# ButterFocus

./: (COOL) Lithium.md  .gitignore  CMakeLists.txt  LICENSE.md  README.md  recompile.bat
DEPRECATED/: [DEPRECATED]GetWindowRelatedInfoWin32.hpp
Scripts/: main.cpp
Scripts/C-Sharp/: ActiveWindowHelper.cs
Scripts/MainGUI/: MainGUI.cpp
Scripts/MainGUI/Headers/: MainGUI.hpp
Scripts/WindowTrackerAndShit/: GetCurrentWindow.cpp  GetWindowRelatedInfoWin32.cpp
Scripts/WindowTrackerAndShit/Headers/: GetCurrentWindow.hpp  GetWindowRelatedInfoWin32.hpp
compiled/Debug/: imgui.ini
